[tool.poetry]
name = "django-grpc"
version = "1.1.2"
description = "Easy gRPC service based on Django application"
authors = ["Stan Misiurev <smisiurev@gmail.com>"]
license = "MIT License"
readme = "README.md"
packages = [
    { include = "django_grpc" },
    { include = "django_grpc_testtools" }
]

[tool.poetry.dependencies]
python = "^3.11"
protobuf = "*"
grpcio = "*"
grpcio-tools = "*"
django = ">=4.2,<6.0"
grpcio-reflection = "*"


[tool.poetry.group.dev.dependencies]
bumpversion = "^0.6.0"
wheel = ">=0.45.1,<0.47.0"
tox = "^4.24.1"

[tool.poetry.group.qa.dependencies]
mirakuru = "^2.5.3"
coverage = "^7.6.10"
mock = "^5.1.0"
flake8 = "^7.1.1"
codecov = "^2.1.13"
pytest = "^8.3.4"
pytest-mock = "^3.14.0"
freezegun = "^1.5.1"
pytest-django = "^4.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
